--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,8 @@ body {
   transform: translateX(0);
 }
 .sidebar__menu {
-  font-size: 0.8rem;
+  font-size: 1.4rem;
+  margin-left: 0.3em;
 }
 
 .sidebar__list {
@@ -64,6 +65,14 @@ body {
   text-decoration: none;
   color: var(--main-dark-color);
 }
+.sidebar__list__item a.active {
+  color: crimson;
+  border-bottom: 2px solid crimson;
+}
+.inactive {
+  color: var(--main-dark-color) !important;
+}
+
 .sidebar__break {
   border: 1px dashed var(--main-dark-color);
   width: 50%;
@@ -71,6 +80,10 @@ body {
   /* margin: 0 auto; */
   /* width: 100%; */
 }
+.sidebar__mobile {
+  display: none;
+}
+
 .disabled {
   cursor: not-allowed;
 }
@@ -98,6 +111,8 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -140,7 +155,8 @@ body {
   font-weight: bold;
   text-transform: capitalize;
 }
-.movie__search__title {
+.movie__search__title,
+.hero__title {
   margin: 0.5em 0;
   text-align: center;
 }
@@ -158,6 +174,10 @@ body {
 }
 .navbar__title {
   font-size: 1.5rem;
+}
+.navbar__title a {
+  text-decoration: none;
+  color: var(--main-dark-color);
 }
 .navbar__icon {
   font-size: 2rem;
@@ -335,8 +355,81 @@ body {
   }
 }
 
-/* background: linear-gradient(90deg, #a0a0a0, silver 50%, #a0a0a0);
-    background-size: 200% 100%;
-    -webkit-animation: skeleton-loading-animation 1.5s ease-in-out infinite;
-    animation: skeleton-loading-animation 1.5s ease-in-out infinite;
-    border-radius: 5px; */
+@media (min-width: 580px) {
+  .hero {
+    max-height: 300px;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+
+    align-items: center;
+  }
+
+  .navbar {
+    padding: 1.3em 0.9em;
+    justify-content: center;
+  }
+  .sidebar__mobile {
+    display: block;
+    margin-left: auto;
+  }
+  .navbar__icon {
+    display: none;
+  }
+
+  .sidebar__list {
+    display: flex;
+    align-items: center;
+  }
+  .sidebar__list__item {
+    padding: 0;
+    margin-right: 0.8em;
+  }
+  .sidebar__list__item:hover {
+    text-decoration: underline;
+  }
+  .navbar__search {
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+  }
+  .navbar__search__button {
+    position: relative;
+    padding: 0.5em;
+  }
+
+  .movie__search {
+    width: 350px;
+    padding: 0.5em 1.5em;
+  }
+
+  .movie__search__title,
+  .hero__title {
+    font-size: 1.8rem;
+  }
+  .movie__search__value {
+    font-size: 1.8rem;
+  }
+  .card__container {
+    display: grid;
+    margin-top: 1em;
+    gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    /* grid-template-rows: repeat(auto-fit, minmax(200px, 1fr)); */
+    justify-items: center;
+  }
+  .movie__container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0;
+    padding: 1em;
+  }
+  .movie__descriptions {
+    margin-left: 1.5em;
+  }
+  .movie__image {
+    width: 350px;
+  }
+}
